@@ -18,7 +18,6 @@ package org.apache.lucene.index;
 
 import static com.carrotsearch.randomizedtesting.RandomizedTest.randomBoolean;
 import static com.carrotsearch.randomizedtesting.RandomizedTest.randomLongBetween;
-import static java.util.stream.Collectors.toList;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -155,9 +154,9 @@ public class TestIndexWriterReader extends LuceneTestCase {
     DirectoryReader r1 = DirectoryReader.open(writer);
     assertTrue(r1.isCurrent());
 
-    String id10 = r1.document(10).getField("id").stringValue();
+    String id10 = r1.storedFields().document(10).getField("id").stringValue();
 
-    Document newDoc = r1.document(10);
+    Document newDoc = r1.storedFields().document(10);
     newDoc.removeField("id");
     newDoc.add(new Field("id", Integer.toString(8000), DocHelper.STRING_TYPE_STORED_WITH_TVS));
     writer.updateDocument(new Term("id", id10), newDoc);
@@ -287,9 +286,9 @@ public class TestIndexWriterReader extends LuceneTestCase {
     assertEquals(100, index2df);
 
     // verify the docs are from different indexes
-    Document doc5 = r1.document(5);
+    Document doc5 = r1.storedFields().document(5);
     assertEquals("index1", doc5.get("indexname"));
-    Document doc150 = r1.document(150);
+    Document doc150 = r1.storedFields().document(150);
     assertEquals("index2", doc150.get("indexname"));
     r1.close();
     writer.close();
@@ -345,7 +344,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     // get a reader
     IndexReader r1 = DirectoryReader.open(writer);
 
-    String id10 = r1.document(10).getField("id").stringValue();
+    String id10 = r1.storedFields().document(10).getField("id").stringValue();
 
     // deleted IW docs should not show up in the next getReader
     writer.deleteDocuments(new Term("id", id10));
@@ -353,7 +352,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     assertEquals(1, count(new Term("id", id10), r1));
     assertEquals(0, count(new Term("id", id10), r2));
 
-    String id50 = r1.document(50).getField("id").stringValue();
+    String id50 = r1.storedFields().document(50).getField("id").stringValue();
     assertEquals(1, count(new Term("id", id50), r1));
 
     writer.deleteDocuments(new Term("id", id50));
@@ -362,7 +361,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     assertEquals(0, count(new Term("id", id10), r3));
     assertEquals(0, count(new Term("id", id50), r3));
 
-    String id75 = r1.document(75).getField("id").stringValue();
+    String id75 = r1.storedFields().document(75).getField("id").stringValue();
     writer.deleteDocuments(new TermQuery(new Term("id", id75)));
     IndexReader r4 = DirectoryReader.open(writer);
     assertEquals(1, count(new Term("id", id75), r3));
@@ -386,7 +385,6 @@ public class TestIndexWriterReader extends LuceneTestCase {
     dir1.close();
   }
 
-  @Slow
   public void testAddIndexesAndDoDeletesThreads() throws Throwable {
     final int numIter = TEST_NIGHTLY ? 2 : 1;
     int numDirs = TEST_NIGHTLY ? 3 : 2;
@@ -411,7 +409,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
 
     addDirThreads.close(true);
 
-    assertTrue(addDirThreads.failures.size() == 0);
+    assertTrue(addDirThreads.failures.isEmpty());
 
     TestUtil.checkIndex(mainDir);
 
@@ -609,7 +607,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
    *
    * public static int deleteDocument(Term term, IndexWriter writer) throws
    * IOException { IndexReader reader = writer.getReader(); TermDocs td =
-   * reader.termDocs(term); int doc = -1; //if (td.next()) { // doc = td.doc();
+   * reader.termDocs(term); int doc = -1; //if (td.next()) { // doc = td.storedFields().document();
    * //} //writer.deleteDocuments(term); td.close(); return doc; }
    */
 
@@ -737,11 +735,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     IndexSearcher searcher = newSearcher(r);
     assertEquals(100, searcher.count(q));
 
-    expectThrows(
-        AlreadyClosedException.class,
-        () -> {
-          DirectoryReader.openIfChanged(r);
-        });
+    expectThrows(AlreadyClosedException.class, () -> DirectoryReader.openIfChanged(r));
 
     r.close();
     dir1.close();
@@ -770,7 +764,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     DirectoryReader r = DirectoryReader.open(writer);
 
     final int numIterations = 10;
-    final List<Throwable> excs = Collections.synchronizedList(new ArrayList<Throwable>());
+    final List<Throwable> excs = Collections.synchronizedList(new ArrayList<>());
 
     // Only one thread can addIndexes at a time, because
     // IndexWriter acquires a write lock in each directory:
@@ -813,8 +807,8 @@ public class TestIndexWriterReader extends LuceneTestCase {
       }
     }
 
-    for (int i = 0; i < threads.length; i++) {
-      threads[i].join();
+    for (Thread thread : threads) {
+      thread.join();
     }
     // final check
     DirectoryReader r2 = DirectoryReader.openIfChanged(r);
@@ -854,7 +848,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
         newIndexWriterConfig(new MockAnalyzer(random())).setMergePolicy(newLogMergePolicy(2));
     if (TEST_NIGHTLY) {
       // if we have a ton of iterations we need to make sure we don't do unnecessary
-      // extra flushing otherwise we will timeout on nightly
+      // extra flushing otherwise we will time out on nightly
       iwc.setRAMBufferSizeMB(IndexWriterConfig.DEFAULT_RAM_BUFFER_SIZE_MB);
       iwc.setMaxBufferedDocs(IndexWriterConfig.DISABLE_AUTO_FLUSH);
     }
@@ -1149,11 +1143,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     // other NRT reader, since it is already marked closed!
     for (int i = 0; i < 2; i++) {
       shouldFail.set(true);
-      expectThrows(
-          FakeIOException.class,
-          () -> {
-            DirectoryReader.open(writer).close();
-          });
+      expectThrows(FakeIOException.class, () -> DirectoryReader.open(writer).close());
     }
 
     writer.close();
@@ -1215,7 +1205,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     final long MISSING_VALUE =
         ASC_SORT ? Long.MAX_VALUE : Long.MIN_VALUE; // missing values at the end
 
-    // create a comparator that sort leaf readers according with
+    // create a comparator that sort leaf readers according to
     // the min value (asc sort) or max value (desc sort) of its points
     Comparator<LeafReader> leafSorter =
         Comparator.comparingLong(
@@ -1348,13 +1338,9 @@ public class TestIndexWriterReader extends LuceneTestCase {
   // provided leafSorter
   private static void assertLeavesSorted(
       DirectoryReader reader, Comparator<LeafReader> leafSorter) {
-    List<LeafReader> lrs =
-        reader.leaves().stream().map(LeafReaderContext::reader).collect(toList());
+    List<LeafReader> lrs = reader.leaves().stream().map(LeafReaderContext::reader).toList();
     List<LeafReader> expectedSortedlrs =
-        reader.leaves().stream()
-            .map(LeafReaderContext::reader)
-            .sorted(leafSorter)
-            .collect(toList());
+        reader.leaves().stream().map(LeafReaderContext::reader).sorted(leafSorter).toList();
     assertEquals(expectedSortedlrs, lrs);
   }
 }
