@@ -18,6 +18,7 @@ package org.apache.lucene.distribution;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.module.Configuration;
 import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleFinder;
 import java.lang.module.ModuleReader;
@@ -51,28 +52,15 @@ import org.junit.Test;
  * default {@code LuceneTestCase} configuration setup is not used (you have to annotate test for
  * JUnit, for example).
  */
-public class TestModularLayer {
-  /** A path to a directory with an expanded Lucene distribution. */
-  private static final String DISTRIBUTION_PROPERTY = "lucene.distribution.dir";
+public class TestModularLayer extends AbstractLuceneDistributionTest {
+  /** All Lucene modules (including the test framework), no third party modules. */
+  private static Set<ModuleReference> allLuceneModules;
 
-  /** The expected distribution version of Lucene modules. */
-  private static final String VERSION_PROPERTY = "lucene.distribution.version";
+  /** {@link ModuleFinder} resolving only the core Lucene modules. */
+  private static ModuleFinder allLuceneModulesFinder;
 
-  /** Only core Lucene modules, no third party modules. */
-  private static Set<ModuleReference> allCoreModules;
-
-  /** {@link ModuleFinder} resolving only the Lucene modules. */
-  private static ModuleFinder coreModulesFinder;
-
-  /** Ensure Lucene classes are not directly visible. */
-  @BeforeClass
-  public static void checkLuceneNotInClasspath() {
-    Assertions.assertThatThrownBy(
-            () -> {
-              Class.forName("org.apache.lucene.index.IndexWriter");
-            })
-        .isInstanceOf(ClassNotFoundException.class);
-  }
+  /** {@link ModuleFinder} resolving Lucene core and third party dependencies. */
+  private static ModuleFinder luceneCoreAndThirdPartyModulesFinder;
 
   /**
    * We accept external properties that point to the assembled set of distribution modules and to
@@ -86,7 +74,7 @@ public class TestModularLayer {
       throw new AssertionError(DISTRIBUTION_PROPERTY + " property is required for this test.");
     }
 
-    Path modulesPath = Paths.get(modulesPropertyValue).resolve("modules");
+    Path modulesPath = getDistributionPath().resolve("modules");
     if (!Files.isDirectory(modulesPath)) {
       throw new AssertionError(
           DISTRIBUTION_PROPERTY
@@ -110,21 +98,24 @@ public class TestModularLayer {
               + thirdPartyModulesPath.toAbsolutePath());
     }
 
-    coreModulesFinder = ModuleFinder.of(modulesPath, testModulesPath);
-    allCoreModules = coreModulesFinder.findAll();
+    allLuceneModulesFinder = ModuleFinder.of(modulesPath, testModulesPath);
+    allLuceneModules = allLuceneModulesFinder.findAll();
+
+    luceneCoreAndThirdPartyModulesFinder = ModuleFinder.of(modulesPath, thirdPartyModulesPath);
   }
 
   @AfterClass
   public static void cleanup() {
-    allCoreModules = null;
-    coreModulesFinder = null;
+    allLuceneModules = null;
+    luceneCoreAndThirdPartyModulesFinder = null;
+    allLuceneModulesFinder = null;
   }
 
   /** Make sure all published module names remain constant, even if we reorganize the build. */
   @Test
   public void testExpectedDistributionModuleNames() {
     Assertions.assertThat(
-            allCoreModules.stream().map(module -> module.descriptor().name()).sorted())
+            allLuceneModules.stream().map(module -> module.descriptor().name()).sorted())
         .containsExactly(
             "org.apache.lucene.analysis.common",
             "org.apache.lucene.analysis.icu",
@@ -137,6 +128,7 @@ public class TestModularLayer {
             "org.apache.lucene.analysis.stempel",
             "org.apache.lucene.backward_codecs",
             "org.apache.lucene.benchmark",
+            "org.apache.lucene.benchmark.jmh",
             "org.apache.lucene.classification",
             "org.apache.lucene.codecs",
             "org.apache.lucene.core",
@@ -160,16 +152,89 @@ public class TestModularLayer {
             "org.apache.lucene.test_framework");
   }
 
+  /** Try to instantiate the demo classes so that we make sure their module layer is complete. */
+  @Test
+  public void testDemoClassesCanBeLoaded() {
+    ModuleLayer bootLayer = ModuleLayer.boot();
+    Assertions.assertThatNoException()
+        .isThrownBy(
+            () -> {
+              String demoModuleId = "org.apache.lucene.demo";
+
+              Configuration configuration =
+                  bootLayer
+                      .configuration()
+                      .resolve(
+                          luceneCoreAndThirdPartyModulesFinder,
+                          ModuleFinder.of(),
+                          List.of(demoModuleId));
+
+              ModuleLayer layer =
+                  bootLayer.defineModulesWithOneLoader(
+                      configuration, ClassLoader.getSystemClassLoader());
+
+              for (String className :
+                  List.of(
+                      "org.apache.lucene.demo.IndexFiles",
+                      "org.apache.lucene.demo.SearchFiles",
+                      "org.apache.lucene.index.CheckIndex")) {
+                Assertions.assertThat(layer.findLoader(demoModuleId).loadClass(className))
+                    .isNotNull();
+              }
+            });
+  }
+
+  /** Checks that Lucene Core is a MR-JAR and has Panama foreign classes */
+  @Test
+  public void testMultiReleaseJar() {
+    ModuleLayer bootLayer = ModuleLayer.boot();
+    Assertions.assertThatNoException()
+        .isThrownBy(
+            () -> {
+              String coreModuleId = "org.apache.lucene.core";
+
+              Configuration configuration =
+                  bootLayer
+                      .configuration()
+                      .resolve(
+                          luceneCoreAndThirdPartyModulesFinder,
+                          ModuleFinder.of(),
+                          List.of(coreModuleId));
+
+              ModuleLayer layer =
+                  bootLayer.defineModulesWithOneLoader(
+                      configuration, ClassLoader.getSystemClassLoader());
+
+              ClassLoader loader = layer.findLoader(coreModuleId);
+
+              final Set<Integer> jarVersions = Set.of(19, 20, 21);
+              for (var v : jarVersions) {
+                Assertions.assertThat(
+                        loader.getResource(
+                            "META-INF/versions/"
+                                + v
+                                + "/org/apache/lucene/store/MemorySegmentIndexInput.class"))
+                    .isNotNull();
+              }
+
+              final int runtimeVersion = Runtime.version().feature();
+              if (jarVersions.contains(runtimeVersion)) {
+                Assertions.assertThat(
+                        loader.loadClass("org.apache.lucene.store.MemorySegmentIndexInput"))
+                    .isNotNull();
+              }
+            });
+  }
+
   /** Make sure we don't publish automatic modules. */
   @Test
   public void testAllCoreModulesAreNamedModules() {
-    Assertions.assertThat(allCoreModules)
+    Assertions.assertThat(allLuceneModules)
         .allSatisfy(
-            module -> {
-              Assertions.assertThat(module.descriptor().isAutomatic())
-                  .as(module.descriptor().name())
-                  .isFalse();
-            });
+            module ->
+                Assertions.assertThat(module.descriptor().isAutomatic())
+                    .as(module.descriptor().name())
+                    .isFalse());
   }
 
   /** Ensure all modules have the same (expected) version. */
@@ -177,7 +242,7 @@ public class TestModularLayer {
   public void testAllModulesHaveExpectedVersion() {
     String luceneBuildVersion = System.getProperty(VERSION_PROPERTY);
     Assumptions.assumeThat(luceneBuildVersion).isNotNull();
-    for (var module : allCoreModules) {
+    for (var module : allLuceneModules) {
       Assertions.assertThat(module.descriptor().rawVersion().orElse(null))
           .as("Version of module: " + module.descriptor().name())
           .isEqualTo(luceneBuildVersion);
@@ -187,7 +252,7 @@ public class TestModularLayer {
   /** Ensure SPIs are equal for the module and classpath layer. */
   @Test
   public void testModularAndClasspathProvidersAreConsistent() throws IOException {
-    for (var module : allCoreModules) {
+    for (var module : allLuceneModules) {
       TreeMap<String, TreeSet<String>> modularProviders = getModularServiceProviders(module);
       TreeMap<String, TreeSet<String>> classpathProviders = getClasspathServiceProviders(module);
 
@@ -217,9 +282,7 @@ public class TestModularLayer {
     try (ModuleReader reader = module.open();
         Stream<String> entryStream = reader.list()) {
       List<String> serviceProviderEntryList =
-          entryStream
-              .filter(entry -> serviceEntryPattern.matcher(entry).find())
-              .collect(Collectors.toList());
+          entryStream.filter(entry -> serviceEntryPattern.matcher(entry).find()).toList();
 
       for (String entry : serviceProviderEntryList) {
         List<String> implementations;
@@ -228,7 +291,7 @@ public class TestModularLayer {
               Arrays.stream(new String(is.readAllBytes(), StandardCharsets.UTF_8).split("\n"))
                   .map(String::trim)
                   .filter(line -> !line.isBlank() && !line.startsWith("#"))
-                  .collect(Collectors.toList());
+                  .toList();
         }
 
         Matcher matcher = serviceEntryPattern.matcher(entry);
@@ -264,7 +327,7 @@ public class TestModularLayer {
    */
   @Test
   public void testAllExportedPackagesInSync() throws IOException {
-    for (var module : allCoreModules) {
+    for (var module : allLuceneModules) {
       Set<String> jarPackages = getJarPackages(module, entry -> true);
       Set<ModuleDescriptor.Exports> moduleExports = new HashSet<>(module.descriptor().exports());
 
@@ -278,10 +341,7 @@ public class TestModularLayer {
 
       if (module.descriptor().name().equals("org.apache.lucene.core")) {
         // Internal packages should not be exported to unqualified targets.
-        jarPackages.removeIf(
-            entry -> {
-              return entry.startsWith("org.apache.lucene.internal");
-            });
+        jarPackages.removeIf(entry -> entry.startsWith("org.apache.lucene.internal"));
 
         // Internal packages should use qualified exports.
         moduleExports.removeIf(
@@ -298,11 +358,10 @@ public class TestModularLayer {
       Assertions.assertThat(moduleExports)
           .as("Exported packages in module: " + module.descriptor().name())
           .allSatisfy(
-              export -> {
-                Assertions.assertThat(export.targets())
-                    .as("We only support unqualified exports for now?")
-                    .isEmpty();
-              })
+              export ->
+                  Assertions.assertThat(export.targets())
+                      .as("We only support unqualified exports for now?")
+                      .isEmpty())
           .map(ModuleDescriptor.Exports::source)
           .containsExactlyInAnyOrderElementsOf(jarPackages);
     }
@@ -311,7 +370,7 @@ public class TestModularLayer {
   /** This test ensures that all analysis modules open their resources files to core. */
   @Test
   public void testAllOpenAnalysisPackagesInSync() throws IOException {
-    for (var module : allCoreModules) {
+    for (var module : allLuceneModules) {
       if (false == module.descriptor().name().startsWith("org.apache.lucene.analysis.")) {
         continue; // at moment we only want to open resources inside analysis packages
       }
@@ -326,11 +385,10 @@ public class TestModularLayer {
       Assertions.assertThat(moduleOpens)
           .as("Open packages in module: " + module.descriptor().name())
           .allSatisfy(
-              export -> {
-                Assertions.assertThat(export.targets())
-                    .as("Opens should only be targeted to Lucene Core.")
-                    .containsExactly("org.apache.lucene.core");
-              })
+              export ->
+                  Assertions.assertThat(export.targets())
+                      .as("Opens should only be targeted to Lucene Core.")
+                      .containsExactly("org.apache.lucene.core"))
           .map(ModuleDescriptor.Opens::source)
           .containsExactlyInAnyOrderElementsOf(jarPackages);
     }
