@@ -17,32 +17,40 @@
 package org.apache.lucene.search.matchhighlight;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.PrimitiveIterator;
-import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ForkJoinPool;
 import java.util.function.Predicate;
+import java.util.function.ToIntFunction;
 import org.apache.lucene.analysis.Analyzer;
-import org.apache.lucene.document.Document;
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.FieldInfos;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.index.LeafReader;
 import org.apache.lucene.index.LeafReaderContext;
+import org.apache.lucene.index.StoredFieldVisitor;
+import org.apache.lucene.index.StoredFields;
+import org.apache.lucene.search.FilterMatchesIterator;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.Matches;
 import org.apache.lucene.search.MatchesIterator;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.QueryVisitor;
 import org.apache.lucene.search.ScoreMode;
+import org.apache.lucene.search.TaskExecutor;
 import org.apache.lucene.search.TopDocs;
 import org.apache.lucene.search.Weight;
+import org.apache.lucene.util.ArrayUtil;
+import org.apache.lucene.util.IOConsumer;
 
 /**
  * Utility class to compute a list of "match regions" for a given query, searcher and document(s)
@@ -51,57 +59,116 @@ import org.apache.lucene.search.Weight;
 public class MatchRegionRetriever {
   private final List<LeafReaderContext> leaves;
   private final Weight weight;
-  private final TreeSet<String> affectedFields;
   private final Map<String, OffsetsRetrievalStrategy> offsetStrategies;
-  private final Set<String> preloadFields;
+  private final TreeSet<String> queryAffectedHighlightedFields;
+  private final Predicate<String> shouldLoadStoredField;
+  private final IndexSearcher searcher;
 
   /**
-   * A callback for accepting a single document (and its associated leaf reader, leaf document ID)
-   * and its match offset ranges, as indicated by the {@link Matches} interface retrieved for the
-   * query.
+   * A callback invoked for each document selected by the query. The callback receives a list of hit
+   * ranges, document field value accessor, the leaf reader and document ID of the document.
    */
   @FunctionalInterface
   public interface MatchOffsetsConsumer {
+    /**
+     * @param docId Document id (global).
+     * @param leafReader Document's {@link LeafReader}.
+     * @param leafDocId Document id (within the {@link LeafReader}).
+     * @param fieldValueProvider Access to preloaded document fields. See the {@link
+     *     MatchRegionRetriever#MatchRegionRetriever(IndexSearcher, Query,
+     *     OffsetsRetrievalStrategySupplier, Predicate, Predicate)} constructor's documentation for
+     *     guidelines on which fields are available through this interface.
+     * @param hits A map of field names and offset ranges with query hits.
+     */
     void accept(
-        int docId, LeafReader leafReader, int leafDocId, Map<String, List<OffsetRange>> hits)
+        int docId,
+        LeafReader leafReader,
+        int leafDocId,
+        FieldValueProvider fieldValueProvider,
+        Map<String, List<OffsetRange>> hits)
         throws IOException;
   }
 
   /**
-   * An abstraction that provides document values for a given field. Default implementation in
-   * {@link DocumentFieldValueProvider} just reaches to a preloaded {@link Document}. It is possible
-   * to write a more efficient implementation on top of a reusable character buffer (that reuses the
-   * buffer while retrieving hit regions for documents).
+   * Access to field values of the highlighted document. See the {@link
+   * MatchRegionRetriever#MatchRegionRetriever(IndexSearcher, Query,
+   * OffsetsRetrievalStrategySupplier, Predicate, Predicate)} constructor's documentation for
+   * guidelines on which fields are available through this interface.
    */
-  @FunctionalInterface
-  public interface FieldValueProvider {
-    List<CharSequence> getValues(String field);
+  public interface FieldValueProvider extends Iterable<String> {
+    /**
+     * @return Return a list of values for the provided field name or {@code null} if the field is
+     *     not loaded or does not exist for the field.
+     */
+    List<String> getValues(String field);
   }
 
   /**
-   * A constructor with the default offset strategy supplier.
+   * This constructor uses the default offset strategy supplier from {@link
+   * #computeOffsetRetrievalStrategies(IndexReader, Analyzer)}.
    *
+   * @param searcher The {@link IndexSearcher} used to execute the query. The index searcher's
+   *     {@linkplain IndexSearcher#getTaskExecutor() task executor} is also used for computing
+   *     highlights concurrently.
+   * @param query The query for which highlights should be returned.
    * @param analyzer An analyzer that may be used to reprocess (retokenize) document fields in the
    *     absence of position offsets in the index. Note that the analyzer must return tokens
    *     (positions and offsets) identical to the ones stored in the index.
-   */
-  public MatchRegionRetriever(IndexSearcher searcher, Query query, Analyzer analyzer)
-      throws IOException {
-    this(searcher, query, computeOffsetRetrievalStrategies(searcher.getIndexReader(), analyzer));
-  }
-
-  /**
-   * @param searcher Index searcher to be used for retrieving matches.
-   * @param query The query for which matches should be retrieved. The query should be rewritten
-   *     against the provided searcher.
-   * @param fieldOffsetStrategySupplier A custom supplier of per-field {@link
-   *     OffsetsRetrievalStrategy} instances.
+   * @param fieldsToLoadUnconditionally A custom predicate that should return {@code true} for any
+   *     field that should be preloaded and made available through {@link FieldValueProvider},
+   *     regardless of whether the query affected the field or not. This predicate can be used to
+   *     load additional fields during field highlighting, making them available to {@link
+   *     MatchOffsetsConsumer}s.
+   * @param fieldsToLoadIfWithHits A custom predicate that should return {@code true} for fields
+   *     that should be highlighted. Typically, this would always return {@code true} indicating any
+   *     field affected by the query should be highlighted. However, sometimes highlights may not be
+   *     needed: for example, if they affect fields that are only used for filtering purposes.
+   *     Returning {@code false} for such fields saves the costs of loading those fields into memory
+   *     and scanning through field matches.
    */
   public MatchRegionRetriever(
       IndexSearcher searcher,
       Query query,
-      OffsetsRetrievalStrategySupplier fieldOffsetStrategySupplier)
+      Analyzer analyzer,
+      Predicate<String> fieldsToLoadUnconditionally,
+      Predicate<String> fieldsToLoadIfWithHits)
       throws IOException {
+    this(
+        searcher,
+        query,
+        computeOffsetRetrievalStrategies(searcher.getIndexReader(), analyzer),
+        fieldsToLoadUnconditionally,
+        fieldsToLoadIfWithHits);
+  }
+
+  /**
+   * @param searcher The {@link IndexSearcher} used to execute the query. The index searcher's
+   *     {@linkplain IndexSearcher#getTaskExecutor() task executor} is also used for computing
+   *     highlights concurrently.
+   * @param query The query for which matches should be retrieved. The query should be rewritten
+   *     against the provided searcher.
+   * @param fieldOffsetStrategySupplier A custom supplier of per-field {@link
+   *     OffsetsRetrievalStrategy} instances.
+   * @param fieldsToLoadUnconditionally A custom predicate that should return {@code true} for any
+   *     field that should be preloaded and made available through {@link FieldValueProvider},
+   *     regardless of whether the query affected the field or not. This predicate can be used to
+   *     load additional fields during field highlighting, making them available to {@link
+   *     MatchOffsetsConsumer}s.
+   * @param fieldsToLoadIfWithHits A custom predicate that should return {@code true} for fields
+   *     that should be highlighted. Typically, this would always return {@code true} indicating any
+   *     field affected by the query should be highlighted. However, sometimes highlights may not be
+   *     needed: for example, if they affect fields that are only used for filtering purposes.
+   *     Returning {@code false} for such fields saves the costs of loading those fields into memory
+   *     and scanning through field matches.
+   */
+  public MatchRegionRetriever(
+      IndexSearcher searcher,
+      Query query,
+      OffsetsRetrievalStrategySupplier fieldOffsetStrategySupplier,
+      Predicate<String> fieldsToLoadUnconditionally,
+      Predicate<String> fieldsToLoadIfWithHits)
+      throws IOException {
+    this.searcher = searcher;
     leaves = searcher.getIndexReader().leaves();
     assert checkOrderConsistency(leaves);
 
@@ -109,90 +176,213 @@ public class MatchRegionRetriever {
     // (no optimizations in Boolean queries take place).
     weight = searcher.createWeight(query, ScoreMode.COMPLETE, 0);
 
-    // Compute the subset of fields affected by this query so that we don't load or scan
-    // fields that are irrelevant.
-    affectedFields = new TreeSet<>();
+    // Compute a subset of fields affected by this query and for which highlights should be
+    // returned, so that we don't load or scan fields that are irrelevant.
+    queryAffectedHighlightedFields = new TreeSet<>();
     query.visit(
         new QueryVisitor() {
           @Override
           public boolean acceptField(String field) {
-            affectedFields.add(field);
+            if (fieldsToLoadIfWithHits.test(field)) {
+              queryAffectedHighlightedFields.add(field);
+            }
             return false;
           }
         });
 
     // Compute value offset retrieval strategy for all affected fields.
     offsetStrategies = new HashMap<>();
-    for (String field : affectedFields) {
+    for (String field : queryAffectedHighlightedFields) {
       offsetStrategies.put(field, fieldOffsetStrategySupplier.apply(field));
     }
 
-    // Ask offset strategies if they'll need field values.
-    preloadFields = new HashSet<>();
-    offsetStrategies.forEach(
-        (field, strategy) -> {
-          if (strategy.requiresDocument()) {
-            preloadFields.add(field);
-          }
-        });
-
-    // Only preload those field values that can be affected by the query and are required
-    // by strategies.
-    preloadFields.retainAll(affectedFields);
+    shouldLoadStoredField =
+        (field) -> {
+          return fieldsToLoadUnconditionally.test(field)
+              || queryAffectedHighlightedFields.contains(field);
+        };
   }
 
+  /**
+   * Processes {@link TopDocs} with reasonable defaults. See variants of this method for low-level
+   * tuning parameters.
+   *
+   * @see #highlightDocuments(PrimitiveIterator.OfInt, MatchOffsetsConsumer, ToIntFunction, int,
+   *     int)
+   * @param topDocs Search results.
+   * @param consumer A streaming consumer for document-hits pairs.
+   */
   public void highlightDocuments(TopDocs topDocs, MatchOffsetsConsumer consumer)
       throws IOException {
     highlightDocuments(
         Arrays.stream(topDocs.scoreDocs).mapToInt(scoreDoc -> scoreDoc.doc).sorted().iterator(),
-        consumer);
+        consumer,
+        field -> Integer.MAX_VALUE);
   }
 
   /**
-   * Low-level, high-efficiency method for highlighting large numbers of documents at once in a
-   * streaming fashion.
+   * Low-level, high-efficiency method for highlighting large numbers of documents at once.
    *
    * @param docIds A stream of <em>sorted</em> document identifiers for which hit ranges should be
    *     returned.
    * @param consumer A streaming consumer for document-hits pairs.
+   * @param maxHitsPerField A predicate that should, for the provided field, return the maximum
+   *     number of hit regions to consider when scoring passages. The predicate should return {@link
+   *     Integer#MAX_VALUE} for all hits to be considered, although typically 3-10 hits are
+   *     sufficient and lead to performance savings in long fields with large numbers of hit ranges.
+   * @see #highlightDocuments(PrimitiveIterator.OfInt, MatchOffsetsConsumer, ToIntFunction, int,
+   *     int)
    */
-  public void highlightDocuments(PrimitiveIterator.OfInt docIds, MatchOffsetsConsumer consumer)
+  public void highlightDocuments(
+      PrimitiveIterator.OfInt docIds,
+      MatchOffsetsConsumer consumer,
+      ToIntFunction<String> maxHitsPerField)
+      throws IOException {
+    // Typically enough to saturate a single processing thread and be large enough to
+    // compensate for overhead of concurrency.
+    final int DEFAULT_MAX_BLOCK_SIZE = 50;
+    highlightDocuments(
+        docIds,
+        consumer,
+        maxHitsPerField,
+        DEFAULT_MAX_BLOCK_SIZE,
+        ForkJoinPool.getCommonPoolParallelism());
+  }
+
+  /**
+   * Low-level, high-efficiency method for highlighting large numbers of documents at once.
+   *
+   * <p>Document IDs are grouped into sequential "blocks". For each block, highlights are computed
+   * (this can use parallel threads, if {@link IndexSearcher#getTaskExecutor()}) can execute tasks
+   * in parallel. Finally, processed highlights are passed to the {@code consumer}.
+   *
+   * @param docIds A stream of <em>sorted</em> document identifiers for which hit ranges should be
+   *     returned.
+   * @param consumer A streaming consumer for document-query hits pairs. This consumer will be
+   *     called sequentially, with document ordering corresponding to that of the query results.
+   * @param maxHitsPerField A predicate that should, for the provided field, return the maximum
+   *     number of hit regions to consider when scoring passages. The predicate should return {@link
+   *     Integer#MAX_VALUE} for all hits to be considered, although typically 3-10 hits are
+   *     sufficient and lead to performance savings in long fields with large numbers of hit ranges.
+   * @param maxBlockSize The maximum size of a single contiguous "block" of documents. Each block
+   *     can be processed in parallel, using the index searcher's task executor.
+   * @param maxBlocksProcessedInParallel Maximum number of queued document "blocks"; when reached,
+   *     the queue is processed (possibly concurrently) and then passed to the {@code consumer}. Set
+   *     this value to {@code 1} to process blocks sequentially.
+   */
+  public void highlightDocuments(
+      PrimitiveIterator.OfInt docIds,
+      MatchOffsetsConsumer consumer,
+      ToIntFunction<String> maxHitsPerField,
+      int maxBlockSize,
+      int maxBlocksProcessedInParallel)
       throws IOException {
     if (leaves.isEmpty()) {
       return;
     }
 
-    Iterator<LeafReaderContext> ctx = leaves.iterator();
-    LeafReaderContext currentContext = ctx.next();
+    ArrayList<Callable<DocHighlightData[]>> blockQueue = new ArrayList<>();
+
+    TaskExecutor taskExecutor = searcher.getTaskExecutor();
+    IOConsumer<ArrayList<Callable<DocHighlightData[]>>> drainQueue;
+    if (maxBlocksProcessedInParallel == 1) {
+      // Sequential, own-thread processing.
+      drainQueue =
+          (queue) -> {
+            for (var callable : queue) {
+              try {
+                processBlock(callable.call(), consumer);
+              } catch (Exception e) {
+                throw new IOException(e);
+              }
+            }
+            queue.clear();
+          };
+    } else {
+      // Potentially concurrent processing via IndexSearcher's TaskExecutor.
+      drainQueue =
+          (queue) -> {
+            for (var highlightData : taskExecutor.invokeAll(queue)) {
+              processBlock(highlightData, consumer);
+            }
+            queue.clear();
+          };
+    }
+
+    // Collect blocks.
     int previousDocId = -1;
-    Map<String, List<OffsetRange>> highlights = new TreeMap<>();
+    int[] block = new int[maxBlockSize];
+    int blockPos = 0;
     while (docIds.hasNext()) {
       int docId = docIds.nextInt();
-
       if (docId < previousDocId) {
         throw new RuntimeException("Input document IDs must be sorted (increasing).");
       }
       previousDocId = docId;
 
-      while (docId >= currentContext.docBase + currentContext.reader().maxDoc()) {
+      block[blockPos++] = docId;
+      if (blockPos >= maxBlockSize || !docIds.hasNext()) {
+        final int[] idBlock = ArrayUtil.copyOfSubArray(block, 0, blockPos);
+        blockQueue.add(() -> prepareBlock(idBlock, maxHitsPerField));
+        blockPos = 0;
+
+        if (blockQueue.size() >= maxBlocksProcessedInParallel) {
+          drainQueue.accept(blockQueue);
+        }
+      }
+    }
+
+    // Finalize any remaining blocks.
+    if (!blockQueue.isEmpty()) {
+      drainQueue.accept(blockQueue);
+    }
+  }
+
+  private record DocHighlightData(
+      int docId,
+      LeafReader leafReader,
+      int leafDocId,
+      FieldValueProvider fieldValueProvider,
+      Map<String, List<OffsetRange>> hits) {}
+
+  private DocHighlightData[] prepareBlock(int[] idBlock, ToIntFunction<String> maxHitsPerField)
+      throws IOException {
+    DocHighlightData[] docData = new DocHighlightData[idBlock.length];
+
+    Iterator<LeafReaderContext> ctx = leaves.iterator();
+    LeafReaderContext currentContext = ctx.next();
+    LeafReader reader = currentContext.reader();
+
+    for (int i = 0; i < idBlock.length; i++) {
+      final int docId = idBlock[i];
+
+      while (docId >= currentContext.docBase + reader.maxDoc()) {
         currentContext = ctx.next();
+        reader = currentContext.reader();
       }
 
       int contextRelativeDocId = docId - currentContext.docBase;
 
-      // Only preload fields we may potentially need.
-      FieldValueProvider documentSupplier;
-      if (preloadFields.isEmpty()) {
-        documentSupplier = null;
-      } else {
-        Document doc = currentContext.reader().document(contextRelativeDocId, preloadFields);
-        documentSupplier = new DocumentFieldValueProvider(doc);
-      }
+      var fieldVisitor = new StoredFieldsVisitor(shouldLoadStoredField);
+      StoredFields storedFields = reader.storedFields();
+      storedFields.document(contextRelativeDocId, fieldVisitor);
 
-      highlights.clear();
+      Map<String, List<OffsetRange>> highlights = new TreeMap<>();
       highlightDocument(
-          currentContext, contextRelativeDocId, documentSupplier, (field) -> true, highlights);
-      consumer.accept(docId, currentContext.reader(), contextRelativeDocId, highlights);
+          currentContext, contextRelativeDocId, fieldVisitor, maxHitsPerField, highlights);
+
+      docData[i] =
+          new DocHighlightData(docId, reader, contextRelativeDocId, fieldVisitor, highlights);
+    }
+
+    return docData;
+  }
+
+  private void processBlock(DocHighlightData[] docHighlightData, MatchOffsetsConsumer consumer)
+      throws IOException {
+    for (var data : docHighlightData) {
+      consumer.accept(
+          data.docId, data.leafReader, data.leafDocId, data.fieldValueProvider, data.hits);
     }
   }
 
@@ -204,7 +394,7 @@ public class MatchRegionRetriever {
       LeafReaderContext leafReaderContext,
       int contextDocId,
       FieldValueProvider doc,
-      Predicate<String> acceptField,
+      ToIntFunction<String> maxHitsPerField,
       Map<String, List<OffsetRange>> outputHighlights)
       throws IOException {
     Matches matches = weight.matches(leafReaderContext, contextDocId);
@@ -212,26 +402,56 @@ public class MatchRegionRetriever {
       return;
     }
 
-    for (String field : affectedFields) {
-      if (acceptField.test(field)) {
-        MatchesIterator matchesIterator = matches.getMatches(field);
-        if (matchesIterator == null) {
-          // No matches on this field, even though the field was part of the query. This may be
-          // possible
-          // with complex queries that source non-text fields (have no "hit regions" in any textual
-          // representation). Skip.
-        } else {
-          OffsetsRetrievalStrategy offsetStrategy = offsetStrategies.get(field);
-          if (offsetStrategy == null) {
-            throw new IOException(
-                "Non-empty matches but no offset retrieval strategy for field: " + field);
-          }
-          List<OffsetRange> ranges = offsetStrategy.get(matchesIterator, doc);
-          if (!ranges.isEmpty()) {
-            outputHighlights.put(field, ranges);
-          }
+    for (String field : queryAffectedHighlightedFields) {
+      MatchesIterator matchesIterator = matches.getMatches(field);
+      if (matchesIterator == null) {
+        // No matches on this field, even though the field was part of the query. This may be
+        // possible
+        // with complex queries that source non-text fields (have no "hit regions" in any textual
+        // representation). Skip.
+      } else {
+        OffsetsRetrievalStrategy offsetStrategy = offsetStrategies.get(field);
+        if (offsetStrategy == null) {
+          throw new IOException(
+              "Non-empty matches but no offset retrieval strategy for field: " + field);
+        }
+        var delegate = offsetStrategy;
+
+        // Limit the number of hits so that we're not extracting dozens just to trim them to a few
+        // in the end.
+        final int maxHits = maxHitsPerField.applyAsInt(field);
+        if (maxHits != Integer.MAX_VALUE) {
+          offsetStrategy =
+              (matchesIterator1, doc1) ->
+                  delegate.get(new MatchesIteratorWithLimit(matchesIterator1, maxHits), doc1);
+        }
+
+        List<OffsetRange> ranges = offsetStrategy.get(matchesIterator, doc);
+        if (!ranges.isEmpty()) {
+          outputHighlights.put(field, ranges);
         }
       }
+    }
+  }
+
+  private static class MatchesIteratorWithLimit extends FilterMatchesIterator {
+    private int limit;
+
+    public MatchesIteratorWithLimit(MatchesIterator matchesIterator, int limit) {
+      super(matchesIterator);
+      if (limit < 0) {
+        throw new IllegalArgumentException();
+      }
+      this.limit = limit;
+    }
+
+    @Override
+    public boolean next() throws IOException {
+      if (limit == 0) {
+        return false;
+      }
+      limit--;
+      return super.next();
     }
   }
 
@@ -262,7 +482,7 @@ public class MatchRegionRetriever {
 
       switch (fieldInfo.getIndexOptions()) {
         case DOCS_AND_FREQS_AND_POSITIONS_AND_OFFSETS:
-          return new OffsetsFromMatchIterator(field);
+          return new OffsetsFromMatchIterator(field, new OffsetsFromPositions(field, analyzer));
 
         case DOCS_AND_FREQS_AND_POSITIONS:
           return new OffsetsFromPositions(field, analyzer);
@@ -291,17 +511,58 @@ public class MatchRegionRetriever {
     };
   }
 
-  /** Implements {@link FieldValueProvider} wrapping a preloaded {@link Document}. */
-  private static final class DocumentFieldValueProvider implements FieldValueProvider {
-    private final Document doc;
+  private static class StoredFieldsVisitor extends StoredFieldVisitor
+      implements FieldValueProvider {
+    private final Predicate<String> needsField;
+    private final LinkedHashMap<String, List<String>> fieldValues = new LinkedHashMap<>();
 
-    public DocumentFieldValueProvider(Document doc) {
-      this.doc = doc;
+    public StoredFieldsVisitor(Predicate<String> shouldLoadStoredField) {
+      this.needsField = shouldLoadStoredField;
     }
 
     @Override
-    public List<CharSequence> getValues(String field) {
-      return Arrays.asList(doc.getValues(field));
+    public Status needsField(FieldInfo fieldInfo) throws IOException {
+      return needsField.test(fieldInfo.name) ? Status.YES : Status.NO;
+    }
+
+    @Override
+    public List<String> getValues(String field) {
+      List<String> values = fieldValues.get(field);
+      return values == null ? List.of() : values;
+    }
+
+    @Override
+    public void stringField(FieldInfo fieldInfo, String value) throws IOException {
+      addField(fieldInfo, value);
+    }
+
+    @Override
+    public void intField(FieldInfo fieldInfo, int value) throws IOException {
+      addField(fieldInfo, Integer.toString(value));
+    }
+
+    @Override
+    public void longField(FieldInfo fieldInfo, long value) throws IOException {
+      addField(fieldInfo, Long.toString(value));
+    }
+
+    @Override
+    public void floatField(FieldInfo fieldInfo, float value) throws IOException {
+      addField(fieldInfo, Float.toString(value));
+    }
+
+    @Override
+    public void doubleField(FieldInfo fieldInfo, double value) throws IOException {
+      addField(fieldInfo, Double.toString(value));
+    }
+
+    private void addField(FieldInfo field, String value) {
+      fieldValues.computeIfAbsent(field.name, v -> new ArrayList<>()).add(value);
+    }
+
+    @Override
+    public Iterator<String> iterator() {
+      return fieldValues.keySet().iterator();
     }
   }
 }
