@@ -40,7 +40,6 @@ import java.util.Set;
 import java.util.SortedMap;
 import java.util.TreeMap;
 import java.util.function.IntToLongFunction;
-import java.util.stream.Collectors;
 import org.apache.lucene.codecs.Codec;
 import org.apache.lucene.codecs.FieldsConsumer;
 import org.apache.lucene.codecs.FieldsProducer;
@@ -62,6 +61,7 @@ import org.apache.lucene.index.SegmentWriteState;
 import org.apache.lucene.index.TermState;
 import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
+import org.apache.lucene.index.VectorEncoding;
 import org.apache.lucene.index.VectorSimilarityFunction;
 import org.apache.lucene.internal.tests.IndexPackageAccess;
 import org.apache.lucene.internal.tests.TestSecrets;
@@ -114,15 +114,15 @@ public class RandomPostingsTester {
 
     // Test w/ multiple threads
     THREADS
-  };
+  }
 
   private long totalPostings;
   private long totalPayloadBytes;
 
   // Holds all postings:
-  private Map<String, SortedMap<BytesRef, SeedAndOrd>> fields;
+  private final Map<String, SortedMap<BytesRef, SeedAndOrd>> fields;
 
-  private FieldInfos fieldInfos;
+  private final FieldInfos fieldInfos;
 
   List<FieldAndTerm> allTerms;
   private int maxDoc;
@@ -163,6 +163,7 @@ public class RandomPostingsTester {
               0,
               0,
               0,
+              VectorEncoding.FLOAT32,
               VectorSimilarityFunction.EUCLIDEAN,
               false);
       fieldUpto++;
@@ -694,6 +695,7 @@ public class RandomPostingsTester {
             "_0",
             maxDoc,
             false,
+            false,
             codec,
             Collections.emptyMap(),
             StringHelper.randomId(),
@@ -734,6 +736,7 @@ public class RandomPostingsTester {
               0,
               0,
               0,
+              VectorEncoding.FLOAT32,
               VectorSimilarityFunction.EUCLIDEAN,
               false);
     }
@@ -952,7 +955,7 @@ public class RandomPostingsTester {
 
     assertNotNull("null DocsEnum", postingsEnum);
     int initialDocID = postingsEnum.docID();
-    assertEquals("inital docID should be -1" + postingsEnum, -1, initialDocID);
+    assertEquals("initial docID should be -1: " + postingsEnum, -1, initialDocID);
 
     if (LuceneTestCase.VERBOSE) {
       if (prevPostingsEnum == null) {
@@ -1248,9 +1251,7 @@ public class RandomPostingsTester {
           Impacts impacts = impactsEnum.getImpacts();
           INDEX_PACKAGE_ACCESS.checkImpacts(impacts, doc);
           impactsCopy =
-              impacts.getImpacts(0).stream()
-                  .map(i -> new Impact(i.freq, i.norm))
-                  .collect(Collectors.toList());
+              impacts.getImpacts(0).stream().map(i -> new Impact(i.freq, i.norm)).toList();
         }
         freq = impactsEnum.freq();
         long norm = docToNorm.applyAsLong(doc);
@@ -1297,9 +1298,7 @@ public class RandomPostingsTester {
           for (int level = 0; level < impacts.numLevels(); ++level) {
             if (impacts.getDocIdUpTo(level) >= max) {
               impactsCopy =
-                  impacts.getImpacts(level).stream()
-                      .map(i -> new Impact(i.freq, i.norm))
-                      .collect(Collectors.toList());
+                  impacts.getImpacts(level).stream().map(i -> new Impact(i.freq, i.norm)).toList();
               break;
             }
           }
@@ -1338,9 +1337,7 @@ public class RandomPostingsTester {
           for (int level = 0; level < impacts.numLevels(); ++level) {
             if (impacts.getDocIdUpTo(level) >= max) {
               impactsCopy =
-                  impacts.getImpacts(level).stream()
-                      .map(i -> new Impact(i.freq, i.norm))
-                      .collect(Collectors.toList());
+                  impacts.getImpacts(level).stream().map(i -> new Impact(i.freq, i.norm)).toList();
               break;
             }
           }
@@ -1366,12 +1363,12 @@ public class RandomPostingsTester {
 
   private static class TestThread extends Thread {
     private Fields fieldsSource;
-    private EnumSet<Option> options;
-    private IndexOptions maxIndexOptions;
-    private IndexOptions maxTestOptions;
-    private boolean alwaysTestMax;
+    private final EnumSet<Option> options;
+    private final IndexOptions maxIndexOptions;
+    private final IndexOptions maxTestOptions;
+    private final boolean alwaysTestMax;
     private RandomPostingsTester postingsTester;
-    private Random random;
+    private final Random random;
 
     public TestThread(
         Random random,
@@ -1602,7 +1599,7 @@ public class RandomPostingsTester {
       while (true) {
         Automaton a = AutomatonTestUtil.randomAutomaton(random);
         a = Operations.determinize(a, Operations.DEFAULT_DETERMINIZE_WORK_LIMIT);
-        CompiledAutomaton ca = new CompiledAutomaton(a, null, true, false);
+        CompiledAutomaton ca = new CompiledAutomaton(a, false, true, false);
         if (ca.type != CompiledAutomaton.AUTOMATON_TYPE.NORMAL) {
           // Keep retrying until we get an A that will really "use" the PF's intersect code:
           continue;
@@ -1627,7 +1624,7 @@ public class RandomPostingsTester {
         }
         TermsEnum intersected = fieldsSource.terms(field).intersect(ca, startTerm);
 
-        Set<BytesRef> intersectedTerms = new HashSet<BytesRef>();
+        Set<BytesRef> intersectedTerms = new HashSet<>();
         BytesRef term;
         while ((term = intersected.next()) != null) {
           if (startTerm != null) {
@@ -1680,11 +1677,7 @@ public class RandomPostingsTester {
       }
     }
     assertFalse(iterator.hasNext());
-    LuceneTestCase.expectThrows(
-        NoSuchElementException.class,
-        () -> {
-          iterator.next();
-        });
+    LuceneTestCase.expectThrows(NoSuchElementException.class, iterator::next);
   }
 
   /**
